fix horisontal divider on horisontal stack (it was visible before the first item too)

--- a/src/components/ui/Stack/Stack.module.css
+++ b/src/components/ui/Stack/Stack.module.css
@@ -75,7 +75,11 @@
     width: 1px;
 }
 
-.withBorder>*:last-child::after {
+.directionColumn.withBorder>*:last-child::after {
+    display: none;
+}
+
+.directionRow.withBorder>*:first-child::after {
     display: none;
 }
 
